Checkpoint: test cases concering the addition of images